--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -9,45 +9,39 @@
 # the `language` matrix defined below to confirm you have the correct set of
 # supported CodeQL languages.
 #
-name: "CodeQL"
+name: "CodeQL Advanced" # Nombre del workflow
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master" ] # Ejecutar cuando hay un push en la rama marcada
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master" ] # Ejecutar en pull request hacia la rama marcada
   schedule:
-    - cron: '37 21 * * 5'
+    - cron: '36 4 * * 6' # Ejecutar cada sabado a las 4:36 AM UTC
 
 jobs:
   analyze:
-    name: Analyze (${{ matrix.language }})
+    name: Analyze (${{ matrix.language }}) # Nombre del job, incluye el lenguaje de analisis
     # Runner size impacts CodeQL analysis time. To learn more, please see:
     #   - https://gh.io/recommended-hardware-resources-for-running-codeql
     #   - https://gh.io/supported-runners-and-hardware-resources
     #   - https://gh.io/using-larger-runners (GitHub.com only)
     # Consider using larger runners or machines with greater resources for possible analysis time improvements.
-    runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
-    timeout-minutes: ${{ (matrix.language == 'swift' && 120) || 360 }}
-    permissions:
-      # required for all workflows
-      security-events: write
-
-      # required to fetch internal or private CodeQL packs
-      packages: read
-
-      # only required for workflows in private repositories
-      actions: read
-      contents: read
+    runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }} # Definir el runner
+    permissions:      
+      security-events: write # Permiso de escritura para eventos de seguridad
+      packages: read # Permiso de lectura para paquetes
+      actions: read # Permiso de lectura para acciones (solo para repos privados)
+      contents: read # Permiso de lectura para contenido (solo para repos privados)
 
     strategy:
-      fail-fast: false
+      fail-fast: false # No detenerse al primer fallo
       matrix:
         include:
         - language: csharp
-          build-mode: autobuild
+          build-mode: autobuild # Configuracion para c#
         - language: javascript-typescript
-          build-mode: none
+          build-mode: none # Configuracion para JavaScript y TypeScript
         # CodeQL supports the following values keywords for 'language': 'c-cpp', 'csharp', 'go', 'java-kotlin', 'javascript-typescript', 'python', 'ruby', 'swift'
         # Use `c-cpp` to analyze code written in C, C++ or both
         # Use 'java-kotlin' to analyze code written in Java, Kotlin or both
@@ -58,14 +52,14 @@ jobs:
         # your codebase is analyzed, see https://docs.github.com/en/code-security/code-scanning/creating-an-advanced-setup-for-code-scanning/codeql-code-scanning-for-compiled-languages
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v4
+      uses: actions/checkout@v4 # Clonar el repositorio
 
     # Initializes the CodeQL tools for scanning.
-    - name: Initialize CodeQL
+    - name: Initialize CodeQL # Inicializar CodeQl
       uses: github/codeql-action/init@v3
       with:
-        languages: ${{ matrix.language }}
-        build-mode: ${{ matrix.build-mode }}
+        languages: ${{ matrix.language }} # Lenguaje de analisis segun matriz
+        build-mode: ${{ matrix.build-mode }} # Modo de construccion segun matriz
         # If you wish to specify custom queries, you can do so here or in a config file.
         # By default, queries listed here will override any specified in a config file.
         # Prefix the list here with "+" to use these queries and those in the config file.
@@ -90,6 +84,6 @@ jobs:
         exit 1
 
     - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v3
+      uses: github/codeql-action/analyze@v3 #realizar analisis con CodeQL
       with:
-        category: "/language:${{matrix.language}}"
+        category: "/language:${{matrix.language}}" # Categoria del analisi segun el lenguaje
